--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -28,6 +29,7 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "prisma": "^5.2.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
