--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.9",
     "@vitest/coverage-v8": "^0.34.2",
+    "dotenv": "^16.3.1",
     "prisma": "^5.2.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
